5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4424/executions/1585_825.log
== TEST (2019-03-28 11:33:28) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
raio=int(input("digite o raio")
			
area=pi*raio**2
volume=(4/3)pi*raio**3
total=area,volume
			
print(round(total, 3))
-- ERROR:
File "XXXX", line 6
    area=pi*raio**2
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 11:33:49) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
raio=float(input("digite o raio")
			
area=pi*raio**2
volume=(4/3)pi*raio**3
total=area,volume
			
print(round(total, 3))
-- ERROR:
File "XXXX", line 6
    area=pi*raio**2
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 11:34:01) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
raio=float(input("digite o raio")
			
area=raio**2
volume=(4/3)pi*raio**3
total=area,volume
			
print(round(total, 3))
-- ERROR:
File "XXXX", line 6
    area=raio**2
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 11:34:18) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
raio=float(input("digite o raio")
			

volume=(4/3)pi*raio**3
total=area,volume
			
print(round(total, 3))
-- ERROR:
File "XXXX", line 7
    volume=(4/3)pi*raio**3
         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 11:36:02) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
raio=float(input("digite o raio")
			
area=pi*raio**2
volume=(4/3)pi*raio**3
total=area,volume
			
print(round(total, 3))
-- ERROR:
File "XXXX", line 6
    area=pi*raio**2
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 11:42:18) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import*
raio=float(input("digite o raio")
			
area=pi*raio**2
volume=(4/3)pi*raio**3
total=area,volume
			
print(round(total, 3))
-- ERROR:
File "XXXX", line 7
    area=pi*raio**2
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 11:42:21) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import*
raio=float(input("digite o raio")
			
area=pi*raio**2
volume=(4/3)pi*raio**3
total=area,volume
			
print(round(total, 3))
-- ERROR:
File "XXXX", line 7
    area=pi*raio**2
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 11:42:41) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import*
raio=float(input("digite o raio"))
			
area=pi*raio**2
volume=(4/3)pi*raio**3
total=area,volume
			
print(round(total, 3))
-- ERROR:
File "XXXX", line 8
    volume=(4/3)pi*raio**3
                 ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 11:42:54) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import *
raio=float(input("digite o raio"))
			
area=pi*raio**2
volume=(4/3)pi*raio**3
total=area,volume
			
print(round(total, 3))
-- ERROR:
File "XXXX", line 8
    volume=(4/3)pi*raio**3
                 ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 11:43:18) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import *
raio=float(input("digite o raio"))
			
area=pi*raio**2
volume=(4/3)*pi*raio**3
total=area,volume
			
print(round(total, 3))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 11, in <module>
    print(round(total, 3))
TypeError: type tuple doesn't define __round__ method
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-28 11:44:06) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import *
raio=float(input("digite o raio"))
			
area=pi*raio**2
volume=(4/3)*pi*raio**3

			
print(round(area, 3))
print(round(volume, 3))
-- EXECUTION TIME:
0.147652
-- TEST CASE 1:
---- input:
4.5

---- correct output:
63.617
381.704
---- user output:
63.617
381.704
-- TEST CASE 2:
---- input:
12.34
---- correct output:
478.388
7871.076
---- user output:
478.388
7871.076
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
